<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:padding="32dp"
    android:paddingTop="32dp"
    android:paddingBottom="0dp"
    tools:context=".MainActivity">

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:fontFamily="@font/montserrat_semibold"
      android:text="QUOTIFY"
      android:textAlignment="center"
      android:textColor="#FFF"
      android:textSize="28sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <LinearLayout
      android:id="@+id/linearLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@drawable/bg_card"
      android:orientation="vertical"
      android:paddingStart="16dp"
      android:paddingTop="16dp"
      android:paddingEnd="16dp"
      android:paddingBottom="40dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:scaleX="-1"
        android:scaleY="-1"
        app:tint = "#454545"
        android:src="@drawable/ic_quote" />

    <TextView
        android:id="@+id/quoteText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_semibold"
        android:paddingStart="10dp"
        android:text="Genius is one percent inspiration and ninety-nine percent perspiration."
        android:textColor="#454545"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/quoteAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat_medium"
        android:paddingStart="10dp"
        android:text="Bruce Wayne"
        android:textColor="#454545"
        android:textSize="20sp" />


  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent">

    <TextView
        android:id="@+id/btnPrevious"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableStart="@drawable/ic_left_arrow"
        android:drawableTint="#80FFFFFF"
        android:text="PREVIOUS"
        android:onClick="onPrevious"
        android:textColor="#80FFFFFF"
        android:textSize="18sp"></TextView>

    <TextView
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableEnd="@drawable/ic_arrow"
        android:drawableTint="#80FFFFFF"
        android:text="NEXT"
        android:onClick="onNext"
        android:textAlignment="textEnd"
        android:textColor="#80FFFFFF"
        android:textSize="18sp"></TextView>
  </LinearLayout>

  <com.google.android.material.floatingactionbutton.FloatingActionButton
      android:id="@+id/floatingActionButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:clickable="true"
      android:layout_marginRight="24dp"
      app:backgroundTint="#EEE"
      android:onClick="onShare"
      android:foregroundTint="#FFF"
      app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
      app:layout_constraintEnd_toEndOf="@+id/linearLayout"
      app:layout_constraintTop_toBottomOf="@+id/linearLayout"
      app:srcCompat="@drawable/ic_share" />


</androidx.constraintlayout.widget.ConstraintLayout>